# 2026-summer-semester-groupproject-reader

./: .gitignore  AGENTS.md  CORRECTION.md  INIT.md  INTERFACE.md  PLAN.md  README.md  RELEASE_README.md  UI_BACKEND_ALIGNMENT_ISSUES_2026-07-19.md  UI_MERGE_REPORT_2026-07-19.md  main.py  mercury.spec  phase3-ui-integration-blockers.md  pyproject.toml  任务分配表.xlsx  启动Mercury.bat
.github/workflows/: ci.yml  release.yml
RSS/: init.md  分工.md
app/: app.py  paths.py  state.py  styles.py
core/agent/: __init__.py  providers.py  runtime.py  stream_buffer.py  summary.py  tagging.py  template_loader.py  translation.py
core/digest/: __init__.py  controller.py  exporter.py
core/feed/: opml.py  opml_controller.py  parser.py  sync.py
core/reader/: cache.py  markdown.py  pipeline.py  readability.py
core/tags/: __init__.py  cooccurrence.py  normalizer.py
docs/: MERGE_CONFLICT_REPORT.md  TASK_ASSIGNMENT.md  phase1-acceptance-report.html  phase1-acceptance-report.md  phase2-acceptance-report.md
platform/: __init__.py  file_dialog.py
resources/prompts/: summary.default.yaml  tagging.default.yaml  (+1 more)
spec/: AI_COLLAB_LOG.md  SPEC_PHASE1.md  SPEC_PHASE3_ISSUE5_0719.md  TASK_PHASE1.md
store/: __init__.py  agent_store.py  collection_store.py  content_store.py  db.py  entry_store.py  feed_store.py  migrations.py  note_store.py  tag_store.py  usage_store.py
tests/: conftest.py  test_app_paths.py
tools/: agent_cli.py
ui/: bulk_action_bar.py  collections_widget.py  entry_list.py  icons.py  main_window.py  sidebar.py  theme.py  theme_controller.py  tooltips.py
(+62 files in other folders)
